# Sentinel

./: .gitignore  CHANGELOG.md  README.md  TODO.md  config.toml  install.sh
archives/poc-c/: config.toml  config_loader.c  heartbeat.c  heartbeat.h
client/: config.toml
client/poc-c/: Makefile  README.md  config_loader.h  heartbeat.c  main.c
client/poc-rust/: Cargo.toml  config.toml
client/sentry/: Cargo.toml
client/sentry-bridge/: index.js  package.json
client/sentry-cli/: index.js  package.json
client/sentry-extenstion/: background.js  bundle.sh  enforce.sh  install.sh  manifest.json
client/sentry/src/: config.rs  main.rs  tcp.rs  unix.rs  user.rs
client/sentry/src/bridge/: main.rs  mod.rs
client/sentry/src/bridge/protocols/: info.rs  logout.rs  mod.rs  status.rs  stop.rs
client/sentry/src/monitor/: browser.rs  init.rs  mod.rs  network.rs
client/sentry/src/monitor/browser/: browser.rs  init.rs  mod.rs  policy_updater.rs
client/src/: config.rs  keyboard.rs  logger.rs  main.rs  polling.rs
poc-python/: main.py  pyproject.toml
poc-python/src/: __init__.py
root/: Cargo.toml  README.md  config.toml  docker-compose.yml  install.sh  install_release.sh  install_release_ubuntu.sh  install_release_zsh.sh  install_ubuntu.sh  install_zsh.sh
root-rust/: Cargo.toml
root/sentineld/: Cargo.toml  Docs.md
root/sentineld/src/: config.rs  main.rs  tcp.rs
root/sentineld/src/bridge/: kafka_ws.rs  main.rs  mod.rs
root/sentineld/tests/: kafka.js  main.py  package-lock.json  package.json  pyproject.toml  send.py  tcp_client  tcp_client.c  unix_client.js
(+40 files in other folders)
