[package]
name = "sentry"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.8.8"
daemonize = "0.5.0"
rdkafka = { version = "0.36", features = ["cmake-build", "naive-runtime", "tracing", "tokio","zstd"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
