[package]
name = "sentineld"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
daemonize = "0.5"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1.0.149"
axum = { version = "0.8.8", features = ["ws"] }
serde = { version = "1.0.228", features = ["derive"] }
rdkafka = { version = "0.36", features = ["cmake-build", "naive-runtime", "tracing", "tokio","zstd"] }
futures-util = "0.3.32"
uuid = { version = "1.22.0", features = ["v4"] }
tower-http = { version = "0.6.8", features = ["cors"] }
